fixed the spacing again

--- a/template/css/PITCHME.css
+++ b/template/css/PITCHME.css
@@ -77,6 +77,11 @@
   margin: 2em;
 }
 
+.images {
+  display: flex;
+  justify-content: center;
+}
+
 
 
 /** Sidebox Template Styles ***/
